@@ -36,7 +36,7 @@ sub new_oarray {
   
   my $basic_type_name;
   my $type_dimension = 0;
-  if ($type_name =~ /^([a-zA-Z_0-9:]+)(\[\]+)$/) {
+  if ($type_name =~ /^([a-zA-Z_0-9:]+)((\[\])+)$/) {
     $basic_type_name = $1;
     my $type_dimension_part = $2;
     
@@ -54,14 +54,14 @@ sub new_oarray {
   
   # Check second argument
   unless (ref $elems eq 'ARRAY') {
-    croak("Second argument of SPVM::new_oarray must be array reference");
+    confess "Second argument of SPVM::new_oarray must be array reference";
   }
   
   if ($type_dimension == 1) {
     SPVM::ExchangeAPI::_new_oarray($env, $basic_type_name, $elems);
   }
   else {
-    
+    SPVM::ExchangeAPI::_new_marray($env, $basic_type_name, $type_dimension - 1, $elems);
   }
 }
 
